WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
122034
REGRESSION(
r154219
): 30% more malloc memory used on html5-full-render.
https://bugs.webkit.org/show_bug.cgi?id=122034
Summary
REGRESSION(r154219): 30% more malloc memory used on html5-full-render.
Andreas Kling
Reported
2013-09-27 14:51:52 PDT
REGRESSION(
r154219
): 30% more malloc memory used on html5-full-render.
Attachments
Patch
(1.58 KB, patch)
2013-09-27 14:52 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2013-09-27 14:52:31 PDT
Created
attachment 212842
[details]
Patch
WebKit Commit Bot
Comment 2
2013-09-27 15:33:14 PDT
Comment on
attachment 212842
[details]
Patch Clearing flags on attachment: 212842 Committed
r156582
: <
http://trac.webkit.org/changeset/156582
>
WebKit Commit Bot
Comment 3
2013-09-27 15:33:16 PDT
All reviewed patches have been landed. Closing bug.
Geoffrey Garen
Comment 4
2013-09-27 16:05:06 PDT
Do we want canExecuteScripts() to be false for disconnected frames? What if I want to execute scripts outside the visible window?
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug